[tool.poetry]
name = "repl_python3_ADCEx"
version = "0.1.0"
description = ""
authors = ["saypranavi <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
joystick = "^0.3.8"
smbus = "^1.1.post2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
